<resources>
    <string name="app_name">Recipie Search App</string>
    <string name="welcome_to_reciipiie">Welcome to \n Reciipiie</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="waving_hand_emoji">\uD83D\uDC4B Hey Madhur</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price_serving">Price/serving</string>
    <string name="_156">156</string>
    <string name="_6">6</string>
    <string name="servings">Servings</string>
    <string name="_25_min">25 min</string>
    <string name="ready_in">Ready in</string>
    <string name="recipe_name_goes_here">Recipe name goes here</string>
    <string name="ready_in_25_min">Ready in 25 min</string>
    <string name="shahi_paneer">Shahi Paneer</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="equipments">Equipments</string>
    <string name="quick_summary">Quick Summary</string>
    <string name="nutrition">Nutrition</string>
    <string name="equipment_name">Equipment Name</string>
    <string name="get_full_recipe">Get full recipe</string>
    <string name="full_recipe">Full recipe</string>
    <string name="get_similar_recipe">Get Similar recipe</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="good_for_health_nutrition">Good for health nutrition</string>
    <string name="bad_for_health_nutrition">Bad for health nutrition</string>
    <string name="similar_recipes">Similar recipes</string>
    <string name="favourite_recipes">Favourite recipes</string>
    <string name="recipe_ready_time">%1$d min</string>
</resources>