<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background">

    <FrameLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.RecipeIntroBottomSheet">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="15dp"
            >

            <ImageView
                android:id="@+id/ivArrowLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRecipeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Recipe Name"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/ivArrowLeft" />

            <ImageView
                android:id="@+id/ivFavouriteOutline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_favorite_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/red" />

            <ImageView
                android:id="@+id/iv_FavoriteFilled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_favorite_filled"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/red" />



            <ImageView
                android:id="@+id/ivDishImage"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_placeholder"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRecipeName" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/ivDishImage"
                tools:layout_editor_absoluteX="10dp">


                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/recipe_card_background"
                    android:orientation="vertical"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp">

                    <TextView
                        android:id="@+id/tvReadyIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/ready_in"
                        android:textColor="@color/neutral_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvReadyTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_25_min"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/recipe_card_background"
                    android:orientation="vertical"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp">

                    <TextView
                        android:id="@+id/tvServingsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/servings"
                        android:textColor="@color/neutral_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvServings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_6"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/recipe_card_background"
                    android:orientation="vertical"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp">

                    <TextView
                        android:id="@+id/tvPriceText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/price_serving"
                        android:textColor="@color/neutral_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_156"
                        android:textColor="@color/orange"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGetIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:paddingVertical="15dp"
                android:text="Get Ingredients"
                android:layout_marginHorizontal="15dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="12dp"
                app:iconTint="@color/white"
                app:iconSize="28dp"
                android:layout_marginTop="30dp"
                app:icon="@drawable/ic_arrow_right"
                app:iconGravity="textEnd"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:layout_editor_absoluteX="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>