<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bottom_sheet_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_sheet_background"
            android:paddingVertical="10dp"
            tools:context=".ui.fragments.RecipeIngredientsBottomSheet">

            <TextView
                android:id="@+id/tvRecipeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/full_recipe"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivFavouriteOutline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_arrow_down"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvEquipments"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tvRecipeName" />


            <TextView
                android:id="@+id/tvQuickSummaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/quick_summary"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvEquipments" />

            <TextView
                android:id="@+id/tvQuickSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:maxLines="5"
                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
                android:textColor="@color/neutral_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvQuickSummaryText" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clNutrition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/subtle_blue"
                android:paddingVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvQuickSummary">

                <TextView
                    android:id="@+id/tvNutritionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/nutrition"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvDropDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/black"
                    android:outlineSpotShadowColor="@color/white"
                    android:outlineAmbientShadowColor="@color/white"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivArrowDropDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_drop_down"
                        android:visibility="invisible" />

                    <ImageView
                        android:id="@+id/ivArrowDropUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_drop_up" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvNutrition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:maxLines="5"
                    android:text="@string/lorem_ipsum"
                    android:textColor="@color/neutral_gray"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvNutritionText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clBadHealthNutrition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/subtle_blue"
                android:paddingVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/clNutrition">

                <TextView
                    android:id="@+id/tvBadHealthNutrition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/bad_for_health_nutrition"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvBadNutritionDropDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/black"
                    android:outlineSpotShadowColor="@color/white"
                    android:outlineAmbientShadowColor="@color/white"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivBadNutritionDropDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_drop_down" />

                    <ImageView
                        android:id="@+id/ivBadNutritionDropUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_drop_up"
                        android:visibility="invisible" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvBadNutrition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:maxLines="5"
                    android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
                    android:textColor="@color/neutral_gray"
                    android:textSize="14sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvBadHealthNutrition" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clGoodHealthNutrition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/subtle_blue"
                android:paddingVertical="10dp"
                android:layout_marginBottom="70dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clBadHealthNutrition">

                <TextView
                    android:id="@+id/tvGoodHealthNutrition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/good_for_health_nutrition"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvGoodNutritionDropDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/black"
                    android:outlineSpotShadowColor="@color/white"
                    android:outlineAmbientShadowColor="@color/white"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivGoodNutritionDropDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_drop_down" />

                    <ImageView
                        android:id="@+id/ivGoodNutritionDropUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_drop_up"
                        android:visibility="invisible" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvGoodNutrition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:maxLines="5"
                    android:text="@string/lorem_ipsum"
                    android:textColor="@color/neutral_gray"
                    android:textSize="14sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvGoodHealthNutrition" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/orange"
        android:paddingVertical="15dp"
        android:text="@string/get_similar_recipe"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:icon="@drawable/ic_arrow_right"
        app:iconGravity="textEnd"
        app:iconSize="28dp"
        app:iconTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvQuickSummary"
        tools:layout_editor_absoluteX="20dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>